better dragging and archive spacing fix

--- a/deployment/style.css
+++ b/deployment/style.css
@@ -534,6 +534,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -582,12 +586,20 @@ video {
   margin-top: 2rem;
 }
 
-.mt-\[-44px\] {
-  margin-top: -44px;
-}
-
 .mt-\[-9px\] {
   margin-top: -9px;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -598,12 +610,24 @@ video {
   display: none;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .w-1\/3 {
   width: 33.333333%;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .min-w-\[100px\] {
@@ -631,6 +655,10 @@ video {
   cursor: move;
 }
 
+.cursor-default {
+  cursor: default;
+}
+
 .touch-pan-y {
   --tw-pan-y: pan-y;
   touch-action: var(--tw-pan-x) var(--tw-pan-y) var(--tw-pinch-zoom);
@@ -656,6 +684,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -688,6 +720,10 @@ video {
        column-gap: 1rem;
 }
 
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
 .self-center {
   align-self: center;
 }
@@ -696,6 +732,10 @@ video {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.text-ellipsis {
+  text-overflow: ellipsis;
 }
 
 .rounded-none {
@@ -769,6 +809,16 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-\[6px\] {
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -809,6 +859,46 @@ video {
   padding-top: 1.5rem;
 }
 
+.pl-12 {
+  padding-left: 3rem;
+}
+
+.pl-14 {
+  padding-left: 3.5rem;
+}
+
+.pl-16 {
+  padding-left: 4rem;
+}
+
+.pl-0 {
+  padding-left: 0px;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pr-3 {
+  padding-right: 0.75rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -831,6 +921,19 @@ video {
   line-height: 1rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-\[15px\] {
+  font-size: 15px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -845,6 +948,14 @@ video {
 
 .leading-normal {
   line-height: 1.5;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 
 .text-neutral-300 {
@@ -864,6 +975,10 @@ video {
 
 .opacity-0 {
   opacity: 0;
+}
+
+.opacity-20 {
+  opacity: 0.2;
 }
 
 .outline-none {
@@ -897,6 +1012,10 @@ video {
   background: repeating-linear-gradient(-45deg, transparent 0 4px, #00000033 5px, transparent 6px 10px);
 }
 
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .placeholder\:select-none::-moz-placeholder {
   -moz-user-select: none;
        user-select: none;
@@ -928,14 +1047,89 @@ video {
   left: 1.25rem;
 }
 
+.before\:left-6::before {
+  content: var(--tw-content);
+  left: 1.5rem;
+}
+
+.before\:h-full::before {
+  content: var(--tw-content);
+  height: 100%;
+}
+
+.before\:w-3::before {
+  content: var(--tw-content);
+  width: 0.75rem;
+}
+
+.before\:w-4::before {
+  content: var(--tw-content);
+  width: 1rem;
+}
+
+.before\:w-\[20px\]::before {
+  content: var(--tw-content);
+  width: 20px;
+}
+
+.before\:cursor-move::before {
+  content: var(--tw-content);
+  cursor: move;
+}
+
+.before\:bg-\[url\(\.\.\/imgs\/drag\.svg\)\]::before {
+  content: var(--tw-content);
+  background-image: url(../imgs/drag.svg);
+}
+
+.before\:bg-\[url\(\'\.\.\/imgs\/drag\.svg\'\)\]::before {
+  content: var(--tw-content);
+  background-image: url('../imgs/drag.svg');
+}
+
+.before\:bg-\[url\(\.\/imgs\/drag\.svg\)\]::before {
+  content: var(--tw-content);
+  background-image: url(./imgs/drag.svg);
+}
+
+.before\:bg-center::before {
+  content: var(--tw-content);
+  background-position: center;
+}
+
+.before\:bg-no-repeat::before {
+  content: var(--tw-content);
+  background-repeat: no-repeat;
+}
+
 .before\:text-neutral-300::before {
   content: var(--tw-content);
   --tw-text-opacity: 1;
   color: rgb(212 212 212 / var(--tw-text-opacity));
 }
 
+.before\:opacity-40::before {
+  content: var(--tw-content);
+  opacity: 0.4;
+}
+
+.before\:opacity-30::before {
+  content: var(--tw-content);
+  opacity: 0.3;
+}
+
+.before\:opacity-20::before {
+  content: var(--tw-content);
+  opacity: 0.2;
+}
+
 .before\:content-\[\'\22C5\'\]::before {
   --tw-content: '⋅';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'\'\]::before {
+  --tw-content: '';
   content: var(--tw-content);
 }
 
