--- a/tailwind.css
+++ b/tailwind.css
@@ -6,3 +6,7 @@
   z-index: 1;
   background: repeating-linear-gradient(-45deg, transparent 0 4px, #00000033 5px, transparent 6px 10px);
 }
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
